--- a/README
+++ b/README
@@ -8,4 +8,4 @@ application/controllers-cli/IndexController.php
 `php cli.php index info KEY=VALUE` adds a parameter to the requst.
 `php cli.php index info KEY` adds a boolean parameter equal to TRUE to the requst.
 ------------------------------------------------------------------------------
-This code is Unlicensed (go to http://unlicense.org/ for further information).
+This code is available under BSD license (see LICENSE).
